# open-scribe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: datasets.py  metrics.py  run_eval.py
eval/results/: acibench.json  primock57.json
notebooks/: 01_demo.ipynb
src/open_scribe/: asr.py  coder.py  fhir_emit.py  icd10_common.py  llm.py  note_gen.py  pipeline.py
tests/: test_smoke.py
